# cosmic-browser

./: Cargo.toml  README.md  build.rs  com.system76.CosmicBrowser.desktop  com.system76.CosmicBrowser.json  justfile
src/: app.rs  browser.rs  ipc.rs  lib.rs  main.rs  settings.rs  settings_ui.rs  sidebar.rs  toolbar.rs  webview_widget.rs
