[package]
name = "cosmic-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
libcosmic = { version = "*", features = ["wayland", "tokio"] }
tokio = { version = "*", features = ["full"] }
wry = "0.43"
tao = "0.30"
cosmic-text = "*"
tracing = "*"
serde = { version = "*", features = ["derive"] }
i18n-embed = "*"
reqwest = { version = "*", features = ["rustls-tls"] }
