[package]
name = "cosmic-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
libcosmic = { version = "0.1", features = ["wayland", "tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
wry = { version = "0.43", default-features = false, features = ["linux-body-background-color"] }
raw-window-handle = "0.6"
cosmic-text = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"] }
ashpd = "0.9"
url = "2"
urlencoding = "2"
dirs = "5"

[build-dependencies]
pkg-config = "0.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
